Add square function

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
     <button onclick="deleteLast()">Del</button>
     <button onclick="appendToDisplay('/')">/</button>
     <button onclick="appendToDisplay('*')">*</button><br><br>
-    
+    <button onclick="calculateSquare('^2')">^2</button><br><br>
+
     <button onclick="appendToDisplay('7')">7</button>
     <button onclick="appendToDisplay('8')">8</button>
     <button onclick="appendToDisplay('9')">9</button>
